horizontal scroll bug fixed and first sentence changed

--- a/src/App.scss
+++ b/src/App.scss
@@ -23,7 +23,7 @@
     top: 0;
     left: 0;
     visibility: hidden;
-    overflow-x: hidden;
+    //overflow-x: hidden;
   }
 
   .centering-div {
